// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add "aria-label" to a span that doesn't have it 1`] = `
"
class AlmostThere extends React.component {
  render() {
    return <span role=\\"img\\" aria-label=\\"pig nose\\">🐽</span>;
  }
}"
`;

exports[`should add "role" to a span that doesn't have it 1`] = `
"
class AlmostThere extends React.component {
  render() {
    return <span aria-label=\\"pig nose\\" role=\\"img\\">🐽</span>;
  }
}"
`;

exports[`should be able to handle multiple emojis next to each other 1`] = `
"
function Bad() {
  return <div>
          <span aria-label=\\"pig nose\\" role=\\"img\\">🐽</span><span aria-label=\\"pile of poo\\" role=\\"img\\">💩</span>
        </div>;
}"
`;

exports[`should be able to handle multiple emojis separated by text 1`] = `
"
function Bad() {
  return <div>
          test <span aria-label=\\"pig nose\\" role=\\"img\\">🐽</span> blah <span aria-label=\\"pile of poo\\" role=\\"img\\">💩</span>
        </div>;
}"
`;

exports[`should be able to handle multiple emojis, with one being good and another needing fixing 1`] = `
"
function Bad() {
  return <div>
          <span role=\\"img\\" aria-label=\\"pig nose\\">🐽</span><span aria-label=\\"pile of poo\\" role=\\"img\\">💩</span>
        </div>;
}"
`;

exports[`should do nothing if the emoji is accessible already 1`] = `
"
function Correct() {
  return <span aria-label=\\"shouldn't change\\" role=\\"img\\">🐽</span>;
}"
`;

exports[`should fix emojis that are in accessible spans but with other text 1`] = `
"
function NotQuiteButClose() {
  return <span aria-label=\\"shouldn't change\\" role=\\"img\\">asd <span aria-label=\\"pig nose\\" role=\\"img\\">🐽</span> asdf</span>;
}"
`;

exports[`should wrap an emoji that doesn't have any accessibility span 1`] = `
"
function Bad() {
  return <div>
          test <span aria-label=\\"pig nose\\" role=\\"img\\">🐽</span> blah
        </div>;
}"
`;
